# python-flask-mysql-demo

./: axios_call_second.html  pyproject.toml
html/: index.css  index.html  login.html  products.html  utils.js
main/: app.py  config.py  utils.py
main/models/: __init__.py  blog.py  order.py  product.py  user.py
main/templates/: say_hello.html
main/usecases/: __init__.py  blog.py  login.py  order.py  product.py
