[tool.poetry]
name = "python-flask-mysql-demo"
version = "0.1.0"
description = ""
authors = ["SUDOPWR <sudopwr@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
