[tool.poetry]
name = "python-flask-mysql-demo"
version = "0.1.0"
description = ""
authors = ["SUDOPWR <sudopwr@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-cors = "^4.0.0"
uuid = "^1.30"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
flask-sqlalchemy = "^3.0.5"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
